data collection almost done (8 character bug + cleanup needed)

--- a/lora_example_notebook.ipynb
+++ b/lora_example_notebook.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "75d07836-3805-4106-a38a-e478db688e79",
    "metadata": {},
    "outputs": [
@@ -123,47 +123,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Received packet with rssi: -115.\n",
-      "{'tmst': 128525267, 'time': '2025-05-15T09:15:08.313573Z', 'chan': 3, 'freq': 867.1, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 1.5, 'rssi': -115, 'size': 27, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': 'fe00100a'}\n",
+      "Received packet with rssi: -60.\n",
+      "{'tmst': 3239324179, 'time': '2025-05-15T10:06:55.631736Z', 'chan': 3, 'freq': 867.1, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 9.2, 'rssi': -60, 'size': 28, 'gateway': 'a8:40:41:1e:ae:00:41:50', 'device_addr': '260bc456'}\n",
       "\n",
-      "Received packet with rssi: -138.\n",
-      "{'tmst': 129373428, 'time': '2025-05-15T09:15:09.187623Z', 'chan': 7, 'freq': 867.9, 'stat': 1, 'modu': 'LORA', 'datr': 'SF12BW125', 'codr': '4/5', 'lsnr': -16.5, 'rssi': -138, 'size': 52, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': 'db739af4'}\n",
-      "\n",
-      "Received packet with rssi: -93.\n",
-      "{'tmst': 133799851, 'time': '2025-05-15T09:15:11.722135Z', 'rfch': 1, 'freq': 868.1, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 9.2, 'rssi': -93, 'size': 22, 'gateway': 'a8:40:41:1e:e8:90:41:50', 'device_addr': 'fe00e86f', 'device_eui': '0004a30b001fe21c', 'device_name': 'nighthawk0025'}\n",
+      "Received packet with rssi: -95.\n",
+      "{'tmst': 3237194643, 'time': '2025-05-15T10:06:56.983453Z', 'chan': 3, 'freq': 867.1, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 9.5, 'rssi': -95, 'size': 18, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': 'fe00e85f', 'device_eui': '353131398037830f', 'device_name': 'p190201-2016922'}\n",
       "This is a known device!\n",
-      "Device name:  nighthawk0025\n",
+      "Device name:  p190201-2016922\n",
       "\n",
-      "Received packet with rssi: -115.\n",
-      "{'tmst': 133409132, 'time': '2025-05-15T09:15:13.203160Z', 'chan': 6, 'freq': 867.7, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 1.8, 'rssi': -115, 'size': 27, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': 'fe001052'}\n",
-      "\n",
-      "Received packet with rssi: -108.\n",
-      "{'tmst': 134004987, 'time': '2025-05-15T09:15:13.791807Z', 'chan': 4, 'freq': 867.3, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 6, 'rssi': -108, 'size': 22, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': 'fe00e84e', 'device_eui': '0004a30b00201ff0', 'device_name': 'nighthawk0031'}\n",
+      "Received packet with rssi: -75.\n",
+      "{'tmst': 3240687155, 'time': '2025-05-15T10:06:56.993294Z', 'chan': 3, 'freq': 867.1, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 9.2, 'rssi': -75, 'size': 18, 'gateway': 'a8:40:41:1e:ae:00:41:50', 'device_addr': 'fe00e85f', 'device_eui': '353131398037830f', 'device_name': 'p190201-2016922'}\n",
       "This is a known device!\n",
-      "Device name:  nighthawk0031\n",
+      "Device name:  p190201-2016922\n",
       "\n",
-      "Received packet with rssi: -78.\n",
-      "{'tmst': 137498019, 'time': '2025-05-15T09:15:13.807155Z', 'chan': 4, 'freq': 867.3, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 8.8, 'rssi': -78, 'size': 22, 'gateway': 'a8:40:41:1e:ae:00:41:50', 'device_addr': 'fe00e84e', 'device_eui': '0004a30b00201ff0', 'device_name': 'nighthawk0031'}\n",
+      "Received packet with rssi: -109.\n",
+      "{'tmst': 3242310940, 'time': '2025-05-15T10:06:58.623049Z', 'chan': 5, 'freq': 867.5, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 4.8, 'rssi': -109, 'size': 22, 'gateway': 'a8:40:41:1e:ae:00:41:50', 'device_addr': 'fe00e83a', 'device_eui': '0004a30b001ffe27', 'device_name': 'nighthawk0034'}\n",
       "This is a known device!\n",
-      "Device name:  nighthawk0031\n",
-      "\n",
-      "Received packet with rssi: -135.\n",
-      "{'tmst': 141356892, 'time': '2025-05-15T09:15:21.170885Z', 'rfch': 1, 'freq': 868.1, 'stat': 1, 'modu': 'LORA', 'datr': 'SF12BW125', 'codr': '4/5', 'lsnr': -16.2, 'rssi': -135, 'size': 23, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': '30094518'}\n",
-      "\n",
-      "Received packet with rssi: -99.\n",
-      "{'tmst': 141496132, 'time': '2025-05-15T09:15:21.287508Z', 'chan': 5, 'freq': 867.5, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 6, 'rssi': -99, 'size': 17, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': 'fe00e806', 'device_eui': '353131396037830f', 'device_name': 'p190201-2016923'}\n",
-      "This is a known device!\n",
-      "Device name:  p190201-2016923\n",
-      "\n",
-      "Received packet with rssi: -69.\n",
-      "{'tmst': 144989164, 'time': '2025-05-15T09:15:21.294810Z', 'chan': 5, 'freq': 867.5, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 7.8, 'rssi': -69, 'size': 17, 'gateway': 'a8:40:41:1e:ae:00:41:50', 'device_addr': 'fe00e806', 'device_eui': '353131396037830f', 'device_name': 'p190201-2016923'}\n",
-      "This is a known device!\n",
-      "Device name:  p190201-2016923\n",
+      "Device name:  nighthawk0034\n",
       "\n",
       "Received packet with rssi: -96.\n",
-      "{'tmst': 146033059, 'time': '2025-05-15T09:15:23.955849Z', 'chan': 4, 'freq': 867.3, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 9.8, 'rssi': -96, 'size': 28, 'gateway': 'a8:40:41:1e:e8:90:41:50', 'device_addr': '008edf37', 'device_eui': 'a81758fffe048577', 'device_name': 'elsys-a81758fffe048577'}\n",
+      "{'tmst': 3239476875, 'time': '2025-05-15T10:06:59.271302Z', 'chan': 1, 'rfch': 1, 'freq': 868.3, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 9.8, 'rssi': -96, 'size': 23, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': 'd0041f0e'}\n",
+      "\n",
+      "Received packet with rssi: -106.\n",
+      "{'tmst': 3242969387, 'time': '2025-05-15T10:06:59.280533Z', 'chan': 1, 'rfch': 1, 'freq': 868.3, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 7, 'rssi': -106, 'size': 23, 'gateway': 'a8:40:41:1e:ae:00:41:50', 'device_addr': 'd0041f0e'}\n",
+      "\n",
+      "Received packet with rssi: -132.\n",
+      "{'tmst': 3239674228, 'time': '2025-05-15T10:06:59.490094Z', 'rfch': 1, 'freq': 868.1, 'stat': 1, 'modu': 'LORA', 'datr': 'SF12BW125', 'codr': '4/5', 'lsnr': -12.8, 'rssi': -132, 'size': 23, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': '30451234'}\n",
+      "\n",
+      "Received packet with rssi: -81.\n",
+      "{'tmst': 3241909827, 'time': '2025-05-15T10:06:59.836506Z', 'chan': 1, 'rfch': 1, 'freq': 868.3, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 9.8, 'rssi': -81, 'size': 28, 'gateway': 'a8:40:41:1e:e8:90:41:50', 'device_addr': '01bbeaa0', 'device_eui': 'a81758fffe0362b5', 'device_name': 'elsys-a81758fffe0362b5'}\n",
       "This is a known device!\n",
-      "Device name:  elsys-a81758fffe048577\n",
+      "Device name:  elsys-a81758fffe0362b5\n",
+      "\n",
+      "Received packet with rssi: -90.\n",
+      "{'tmst': 3241431899, 'time': '2025-05-15T10:07:01.229208Z', 'chan': 2, 'rfch': 1, 'freq': 868.5, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 7, 'rssi': -90, 'size': 29, 'gateway': 'a8:40:41:1d:a5:6c:41:50', 'device_addr': '01434871', 'device_eui': 'a81758fffe0362ab', 'device_name': 'A81758FFFE0362AB'}\n",
+      "This is a known device!\n",
+      "Device name:  A81758FFFE0362AB\n",
+      "\n",
+      "Received packet with rssi: -97.\n",
+      "{'tmst': 3244924411, 'time': '2025-05-15T10:07:01.237028Z', 'chan': 2, 'rfch': 1, 'freq': 868.5, 'stat': 1, 'modu': 'LORA', 'datr': 'SF7BW125', 'codr': '4/5', 'lsnr': 7, 'rssi': -97, 'size': 29, 'gateway': 'a8:40:41:1e:ae:00:41:50', 'device_addr': '01434871', 'device_eui': 'a81758fffe0362ab', 'device_name': 'A81758FFFE0362AB'}\n",
+      "This is a known device!\n",
+      "Device name:  A81758FFFE0362AB\n",
       "\n",
       "Received 10 messages!\n"
      ]
